--- a/templates/components/cards/projectCard.html
+++ b/templates/components/cards/projectCard.html
@@ -32,41 +32,38 @@
           ...
         {% endif %}
       </p>
+    </div>
 
-      <div class="mt-auto">
-        <div class="d-flex justify-content-between align-items-center">
+    <div class="card-footer">
+      <div class="d-flex justify-content-between align-items-center">
+        <div class="d-flex align-items-center gap-2">
           <!-- 项目作者 -->
-          {% set user = project.author %}
-          {% include 'components/common/userBadge.html' %}
+          {% with user=project.author %}
+            {% include 'components/common/userBadge.html' %}
+          {% endwith %}
 
           <!-- 项目创建时间 -->
           <small class="text-muted">{{ project.created_at.strftime('%Y-%m-%d') }}</small>
         </div>
-        <div class="d-flex justify-content-between">
-          <div class="mt-3 d-flex gap-2">
-            <!-- 仓库按钮 -->
 
-            {% if project.github_url %}
-              <a href="{{ project.github_url }}" class="btn btn-sm btn-outline-light" target="_blank"><i class="fab fa-github"></i> 仓库</a>
-            {% else %}
-              <button class="btn btn-sm btn-outline-secondary" disabled><i class="fas fa-lock"></i> 闭源</button>
-            {% endif %}
+        <div class="mt-3 d-flex btn-group">
+          <!-- 仓库按钮 -->
 
-            <!-- 演示按钮 -->
+          {% if project.github_url %}
+            <a href="{{ project.github_url }}" class="btn btn-sm" title="仓库" target="_blank"><i class="fab fa-github"></i></a>
+          {% else %}
+            <button class="btn btn-sm" title="闭源" disabled><i class="fas fa-lock"></i></button>
+          {% endif %}
 
-            {% if project.demo_url %}
-              <a href="{{ project.demo_url }}" class="btn btn-sm btn-outline-primary" target="_blank"><i class="fas fa-external-link-alt"></i> 演示</a>
-            {% else %}
-              <button class="btn btn-sm btn-outline-secondary" disabled>
-                <i class="fas fa-eye-slash"></i>
-                无演示
-              </button>
-            {% endif %}
-            <!-- - -->
-          </div>
-          <div class="mt-3 d-flex">
-            <a href="{{ url_for('projects.project_docs', project_id=project.id) }}" class="btn btn-sm btn-success"><i class="fas fa-book"></i> 空间</a>
-          </div>
+          <!-- 演示按钮 -->
+
+          {% if project.demo_url %}
+            <a href="{{ project.demo_url }}" class="btn btn-sm" title="演示" target="_blank"><i class="fas fa-external-link-alt"></i></a>
+          {% else %}
+            <button class="btn btn-sm" title="无演示" disabled><i class="fas fa-eye-slash"></i></button>
+          {% endif %}
+          <!-- - -->
+          <a href="{{ url_for('projects.project_docs', project_id=project.id) }}" class="btn btn-sm"><i class="fas fa-book"></i></a>
         </div>
       </div>
     </div>
