--- a/templates/components/common/userBadge.html
+++ b/templates/components/common/userBadge.html
@@ -4,7 +4,7 @@
       <div class="userBadge-avatar me-1">
         <i class="userBadge-avatar-fas fas fa-user-circle"></i>
       </div>
-      <small class="text-muted">Unknown</small>
+      <span class="userBadge-name">Unknown</span>
       <div class="userBadge-dot-box">
         <span class="userBadge-dot rounded-circle bg-secondary" title="未知"></span>
       </div>
@@ -19,27 +19,27 @@
         {% else %}
           <i class="userBadge-avatar-fas fas fa-user-circle"></i>
         {% endif %}
+        <div class="userBadge-dot-box">
+          {% if user.role == 0 %}
+            <span class="userBadge-dot rounded-circle bg-info" title="游客"></span>
+          {% elif user.role == 1 %}
+            <span class="userBadge-dot rounded-circle bg-primary" title="成员"></span>
+          {% elif user.role == 2 %}
+            <span class="userBadge-dot rounded-circle bg-warning" title="管理员"></span>
+          {% elif user.role == 3 %}
+            <span class="userBadge-dot rounded-circle bg-danger" title="超级管理员"></span>
+          {% else %}
+            <span class="userBadge-dot rounded-circle bg-secondary" title="未知"></span>
+          {% endif %}
+        </div>
       </div>
-      <small class="text-muted">
+      <span class="userBadge-name">
         {% if user %}
           {{ user.username }}
         {% else %}
           Unknown
         {% endif %}
-      </small>
-      <div class="userBadge-dot-box">
-        {% if user.role == 0 %}
-          <span class="userBadge-dot rounded-circle bg-info" title="游客"></span>
-        {% elif user.role == 1 %}
-          <span class="userBadge-dot rounded-circle bg-primary" title="成员"></span>
-        {% elif user.role == 2 %}
-          <span class="userBadge-dot rounded-circle bg-warning" title="管理员"></span>
-        {% elif user.role == 3 %}
-          <span class="userBadge-dot rounded-circle bg-danger" title="超级管理员"></span>
-        {% else %}
-          <span class="userBadge-dot rounded-circle bg-secondary" title="未知"></span>
-        {% endif %}
-      </div>
+      </span>
     </a>
   </div>
 {% endif %}
