--- a/templates/pages/navigations.html
+++ b/templates/pages/navigations.html
@@ -37,7 +37,7 @@
           <div class="mb-5">
             <!-- 分类标题 -->
             <div class="d-flex justify-content-between align-items-center mb-3">
-              <h4 class="category-title mb-0">
+              <h4 class="mb-0">
                 {% if category.icon %}
                   <i class="{{ category.icon }}"></i>
                 {% else %}
@@ -84,7 +84,7 @@
 
                           {% if current_user %}
                             <div class="dropdown">
-                              <button class="btn btn-sm btn-outline-secondary border-0" type="button" data-bs-toggle="dropdown" aria-expanded="false"><i class="fas fa-ellipsis-v me-1"></i>选项</button>
+                              <button class="btn btn-sm text-secondary" type="button" data-bs-toggle="dropdown" aria-expanded="false"><i class="fas fa-ellipsis-v me-1"></i>选项</button>
                               <ul class="dropdown-menu dropdown-menu-end">
                                 <li>
                                   <a class="dropdown-item" href="#" onclick="hideNavItem({{ item.id }}); return false;"><i class="fas fa-eye-slash me-2"></i>隐藏</a>
