--- a/templates/components/cards/projectCard.html
+++ b/templates/components/cards/projectCard.html
@@ -50,20 +50,20 @@
           <!-- 仓库按钮 -->
 
           {% if project.github_url %}
-            <a href="{{ project.github_url }}" class="btn btn-sm" title="仓库" target="_blank"><i class="fab fa-github"></i></a>
+            <a href="{{ project.github_url }}" class="btn btn-sm btn-action" title="仓库" target="_blank"><i class="fab fa-github"></i></a>
           {% else %}
-            <button class="btn btn-sm" title="闭源" disabled><i class="fas fa-lock"></i></button>
+            <button class="btn btn-sm btn-action" title="闭源" disabled><i class="fas fa-lock"></i></button>
           {% endif %}
 
           <!-- 演示按钮 -->
 
           {% if project.demo_url %}
-            <a href="{{ project.demo_url }}" class="btn btn-sm" title="演示" target="_blank"><i class="fas fa-external-link-alt"></i></a>
+            <a href="{{ project.demo_url }}" class="btn btn-sm btn-action" title="演示" target="_blank"><i class="fas fa-external-link-alt"></i></a>
           {% else %}
-            <button class="btn btn-sm" title="无演示" disabled><i class="fas fa-eye-slash"></i></button>
+            <button class="btn btn-sm btn-action" title="无演示" disabled><i class="fas fa-eye-slash"></i></button>
           {% endif %}
           <!-- - -->
-          <a href="{{ url_for('projects.project_docs', project_id=project.id) }}" class="btn btn-sm"><i class="fas fa-book"></i></a>
+          <a href="{{ url_for('projects.project_docs', project_id=project.id) }}" class="btn btn-sm btn-action"><i class="fas fa-book"></i></a>
         </div>
       </div>
     </div>
