--- a/templates/components/cards/projectCard.html
+++ b/templates/components/cards/projectCard.html
@@ -58,9 +58,9 @@
           <!-- 演示按钮 -->
 
           {% if project.demo_url %}
-            <a href="{{ project.demo_url }}" class="btn btn-sm btn-action" title="演示" target="_blank"><i class="fas fa-external-link-alt"></i></a>
+            <a href="{{ project.demo_url }}" class="btn btn-sm btn-action" data-title="演示" target="_blank"><i class="fas fa-external-link-alt"></i></a>
           {% else %}
-            <button class="btn btn-sm btn-action" title="无演示" disabled><i class="fas fa-eye-slash"></i></button>
+            <button class="btn btn-sm btn-action" data-title="无演示" disabled><i class="fas fa-eye-slash"></i></button>
           {% endif %}
           <!-- - -->
           <a href="{{ url_for('projects.project_docs', project_id=project.id) }}" class="btn btn-sm btn-action"><i class="fas fa-book"></i></a>
